<resources>
    <string name="app_name">My Application</string>
    <string name="our_logo">Our logo</string>
    <string name="Discover">Discover a world of knowledge and innovation</string>
    <string name="lets_go">Lets go!</string>
    <string name="welcome">welcome to lib nova</string>
    <string name="create_account">Create account</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset">Reset</string>
    <string name="return_to_login">Return to login</string>
    <string name="hooray">Hooray!</string>
    <string name="you_successfully_registered">you successfully registered</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">See all</string>
    <string name="authors_of_the_books">Authors of the books</string>
    <string name="like_icon">Like icon</string>
    <string name="notification_icon">Notification icon</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hi_patron">Hi, Patron.</string>
    <string name="lets_get_to_know_you_better">Lets get to know you better</string>
    <string name="step_1_of_2">Step 1 of 2</string>
    <string name="step_2_of_2">Step 2 of 2</string>
    <string name="select_topics_that_interest_you">Select topics that interest you</string>
    <string name="choose_your_interest">Choose your interest</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="loveness">Loveness</string>
    <string name="john">John</string>
    <string name="smith">Smith</string>
    <string name="next">Next</string>
    <string name="_0712345678">0712345678</string>
    <string name="viewall">viewall</string>
    <string name="notifications">Notifications</string>
    <string name="back_to_home">back to home</string>
    <string name="msg">Hi Kelly welcome to lib-nova hope you gonna enjoy using the app.</string>
    <string name="time">08:23</string>
    <string name="lib_nova">Lib-Nova</string>
    <string name="discover_read_and_connect">Discover, Read, and Connect</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_categories">Add categories</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="menu_btn">Menu Btn</string>
    <string name="menu">This is the menu</string>
    <string name="title_activity_menu_acticity">MenuActicity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>