<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="203dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/mainlogo"
            android:layout_gravity="center"
            android:contentDescription="@string/our_logo" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/blue"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="text"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:ems="15"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="text"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_style"
                android:hint="@string/email_address"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_style"
                android:hint="@string/password"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"

            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_style"
                android:hint="@string/confirm_password"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSSigned"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/et_style"
            />

        <RelativeLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="UnknownId"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvRedirectLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>