<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding"
    tools:context=".OnBoarding"
    android:padding="45dp"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/welcome" />

    <TextView
        android:id="@+id/discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/Discover"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/letsGo"
        app:layout_constraintStart_toStartOf="@+id/letsGo"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/letsGo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:text="@string/lets_go"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/et_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>