<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="203dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/mainlogo"
            android:layout_gravity="center"
            android:contentDescription="@string/our_logo" />



        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/blue"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="text"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:ems="15"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="60dp"
                android:padding="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:passwordToggleEnabled="true"
            android:ems="10"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:hint="@string/password"
                android:ems="15"
               android:padding="10dp"
                android:inputType="textEmailAddress"
                android:minHeight="60dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/green"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/green"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/tvRedirectSignUp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/tvRedirectSignUp" />

            <TextView
                android:id="@+id/tvRedirectSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/signup"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:layout_alignParentEnd="true" />



        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>