<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RSuccess">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/roup"
            android:layout_marginTop="100dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hooray"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_successfully_registered"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/et_style"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>