<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="45dp"
        android:paddingTop="50dp"
        android:paddingEnd="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_patron"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_get_to_know_you_better"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="normal" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/step_1_of_2"-->
<!--            android:textColor="@color/blue"-->
<!--            android:textSize="12sp"-->
<!--            android:textStyle="normal" />-->


<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp">-->

<!--            <View-->
<!--                android:id="@+id/colored_bar"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="5dp"-->
<!--                android:background="@color/green"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <View-->
<!--                android:id="@+id/colored_bar2"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="5dp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:background="#D9D9D9"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toEndOf="@+id/colored_bar"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="5dp"
            android:text="@string/first_name"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:ems="15"
                android:hint="@string/john"
                android:inputType="textEmailAddress"
                android:minHeight="60dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/surname"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:ems="15"
                android:hint="@string/smith"
                android:inputType="textEmailAddress"
                android:minHeight="60dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/phone_number"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:ems="15"
                android:hint="@string/_0712345678"
                android:inputType="textEmailAddress"
                android:minHeight="60dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            >

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/et_style"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintButtonSize" />

            <ProgressBar
                android:id="@+id/progress_bar_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>