<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context=".HomeAdmin">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="52dp"
            android:contentDescription="@string/our_logo"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/bell"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/viewNotif"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/notification_icon"
                android:src="@drawable/ic_bell" />

            <TextView
                android:id="@+id/notificationBadge"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text=""
                android:textColor="#fff"
                android:textSize="13sp"
                android:visibility="gone" />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/Discover" />



        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>